# weird-search-engine

./: .gitignore  deployment-diagram.txt  docker-compose.yml
spider/: .gitignore  main.py  pyproject.toml  tasks.py  test.py  test_main.py
weird-search-frontend/: Dockerfile
weird-search-frontend/app/controllers/: search_controller.rb
weird-search-frontend/app/views/layouts/: application.html.erb
weird-search-frontend/app/views/pwa/: manifest.json.erb
weird-search-frontend/app/views/search/: get.html.erb
weird-search-frontend/app/views/welcome/: index.html.erb
weird-search-frontend/config/: application.rb  cable.yml  credentials.yml.enc  database.yml  deploy.yml  routes.rb
