[project]
name = "spider"
version = "0.1.0"
description = "Web spider for building a basic search index"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "celery[redis]>=5.5.3",
    "hiredis>=3.2.1",
    "redis>=5.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-watcher>=0.4.3",
]
